Completed requests through filter
