# api/swagger.yaml
@@ -52,17 +52,57 @@ paths:
         404:
           description: "Unexpected error"
       x-swagger-router-controller: "Book"
-  /books/{bookId}:
+  /books/filter:
+    get:
+      tags:
+      - "book"
+      summary: "Books available in the inventory"
+      description: "List of books available in the inventory"
+      operationId: "getBooksThroughFilter"
+      produces:
+      - "applications/json"
+      parameters:
+      - name: "title"
+        in: "query"
+        description: "Title of the book"
+        required: false
+        type: "string"
+      - name: "author"
+        in: "query"
+        description: "Author name"
+        required: false
+        type: "string"
+      - name: "genre"
+        in: "query"
+        description: "Book genre"
+        required: false
+        type: "string"
+      - name: "theme"
+        in: "query"
+        description: "Book theme"
+        required: false
+        type: "string"
+      responses:
+        200:
+          description: "A collection of Books"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Book"
+        404:
+          description: "Unexpected error"
+      x-swagger-router-controller: "Book"
+  /books/{bookIsbn}:
     get:
       tags:
       - "book"
       summary: "Find book by ID"
       description: "Returns a book"
-      operationId: "getBookById"
+      operationId: "getBookByIsbn"
       produces:
       - "application/json"
       parameters:
-      - name: "bookId"
+      - name: "bookIsbn"
         in: "path"
         description: "ID of book to return"
         required: true
@@ -77,56 +117,6 @@ paths:
           description: "Invalid ID supplied"
         404:
           description: "Book not found"
-      x-swagger-router-controller: "Book"
-  /books/genres:
-    get:
-      tags:
-      - "book"
-      summary: "Find book by genre"
-      description: "Returns books of a specific genre"
-      operationId: "getBooksByGenre"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "genre"
-        in: "query"
-        description: "Genre of books to be returned"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "Successful operation"
-          schema: 
-            $ref: "#/definitions/Book"
-        400:
-          description: "Invalid genre supplied"
-        404:
-          description: "Books not found"
-      x-swagger-router-controller: "Book"
-  /books/themes:
-    get:
-      tags:
-      - "book"
-      summary: "Find book by theme"
-      description: "Returns books of a specific theme"
-      operationId: "getBooksByTheme"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "theme"
-        in: "query"
-        description: "Theme of books to be returned"
-        required: true
-        type: "string"
-      responses:
-        200:
-          description: "Successful operation"
-          schema: 
-            $ref: "#/definitions/Book"
-        400:
-          description: "Invalid theme supplied"
-        404:
-          description: "Books not found"
       x-swagger-router-controller: "Book"
   /users/login:
     post:
